Add options to handle high m/zs during formula predictions